  * Add a new ROLE_REGISTER to allow enabling/disabling self-registration for
    anonymous users.  By default anonymous users are allowed to self-register.
  * Display the last IP address used by a user on the Special:Block page when
    blocking user accounts.
  * Move hard-coded HTML to template files to allow simpler customization of
    images, table of contents, and other elements.
  * Move several system configuration files (jamwiki-configuration.xml, spam
    blacklist) out of the webapp root and into the JAMWiki system directory to
    make upgrading simpler.
  * Add a honeypot input during registration to deter spambots.
  * Be more strict with HTML-like tags: tags of the form "< tag>" or "< / tag>"
    are no longer supported and must be of the form "<tag>" or "</tag>".  This
    matches Mediawiki.
  * Remove ability to automatically upgrade from versions prior to 1.0.
  * Upgrade to Spring Framework 3.1.0.RELEASE.
  * Upgrade to Spring Security 3.1.0.RELEASE.
  * Upgrade to Lucene Search 3.5.
  * Upgrade to Ehcache 2.5.
  * Upgrade to commons-lang 3.1.
  * Upgrade to commons-io-2.1.
  * Upgrade to commons-codec 1.6.
  * Upgrade to commons-pool 1.5.7.

Bugfixes:

  * Topic exports containing UTF-8 should not escape unicode characters.
    Reported by cstenkes.
  * Overhaul paragraph parsing to fix several edge cases and improve Mediawiki
    compatibility.  For example, paragraphs can now start with "<".
  * Fix wiki line break ("----") to match Mediawiki by allowing four or more
    dashes as well as text on the same line as the dashes.
  * Newlines in table cells will now start a paragraph, matching Mediawiki
    behavior.
  * Allow whitespace in front of wiki table syntax (" {|") to match Mediawiki.
  * Allow thumbnail images to be specified using "thumnbail" in addition to
    "thumb" to match Mediawiki.

Translation Updates:

  * Updated German translations (axelclk).


1.1.3
=====

New Features:

  * None.

Bugfixes:
