@@ -989,13 +989,25 @@ STATEMENT_SELECT_TOPIC_NAME_LOWER = \
     and namespace_id = ? \
     and delete_date is null
 STATEMENT_SELECT_TOPIC_LINKS = \
-    select jam_topic.topic_name \
-    from jam_topic, jam_topic_links \
-    where jam_topic.topic_id = jam_topic_links.topic_id \
-    and jam_topic.virtual_wiki_id = ? \
-    and jam_topic_links.link_topic_namespace_id = ? \
-    and jam_topic_links.link_topic_page_name = ? \
-    order by jam_topic.topic_name
+    ( \
+      select jam_topic.topic_name, null as child_topic_name \
+      from jam_topic, jam_topic_links \
+      where jam_topic.topic_id = jam_topic_links.topic_id \
+      and jam_topic.virtual_wiki_id = ? \
+      and jam_topic_links.link_topic_namespace_id = ? \
+      and jam_topic_links.link_topic_page_name = ? \
+      and jam_topic.redirect_to is null \
+    ) union ( \
+      select parent.topic_name, child.topic_name as child_topic_name \
+      from jam_topic parent, jam_topic child, jam_topic_links \
+      where child.topic_id = jam_topic_links.topic_id \
+      and child.virtual_wiki_id = parent.virtual_wiki_id \
+      and parent.virtual_wiki_id = ? \
+      and parent.redirect_to = ? \
+      and jam_topic_links.link_topic_namespace_id = parent.namespace_id \
+      and jam_topic_links.link_topic_page_name = parent.page_name \
+    ) \
+    order by topic_name, child_topic_name
 STATEMENT_SELECT_TOPIC_LINK_ORPHANS = \
     select jam_topic.topic_name \
     from jam_topic \
