@@ -418,6 +418,7 @@ import.message.success=The following topics were imported successfully\:
 import.title=Import
 linkto.none=There are no pages that link to {0}.
 linkto.overview=The following pages link to {0}.
+linkto.redirect=(redirect page)
 linkto.title=Links to {0}
 log.caption.log.all=All logs
 log.caption.log.block=Block log
