@@ -34,6 +34,7 @@ New Features:
     blocking user accounts.
   * Move hard-coded HTML to template files to allow simpler customization of
     images, table of contents, and other elements.
+  * Include links via redirects on the Special:LinkTo page.
   * Move several system configuration files (jamwiki-configuration.xml, spam
     blacklist) out of the webapp root and into the JAMWiki system directory to
     make upgrading simpler.
